--- a/src/main/resources/templates/showSingleUser.html
+++ b/src/main/resources/templates/showSingleUser.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Customer Registration</title>
+    <title>Show Single User</title>
 
     <link rel="stylesheet"  href="../../static/bootstrap/css/bootstrap.css" th:href="@{/bootstrap/css/bootstrap.css}" />
 
@@ -11,18 +11,30 @@
 
     <script  href="../../static/bootstrap/js/bootstrap.min.js" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 </head>
-</head>
 <body>
-
 <div class="container">
-   <hr>
-    <form method="post" th:action="@{customerRel/showDetails}" >
-        <center>
-            <input type="number" class="form-control mb-4 col-4" name="id" required autofocus="autofocus" placeholder="id of the customer">
-<button type="submit" class="btn btn-info col-3">Search Details</button>
-        </center>
-    </form>
-    <hr>
+    <h3>Details of the user</h3>
+<table class="table table-bordered table-stripped">
+    <thead class="thead-dark">
+    <tr>
+        <th>Customer Name</th>
+        <th>Customer Email</th>
+
+
+    </tr>
+    </thead>
+    <tbody>
+
+    <tr th:each="mob :${newCustomer}">
+
+
+        <td th:text="${mob.customerName}"/>
+        <td th:text="${mob.customerEmail}"/>
+
+
+
+    </tbody>
+</table>
 </div>
 </body>
 </html>
