added more end points

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,12 +16,11 @@
 
 <div class="container">
    <hr>
-    <form method="post" th:action="@{customerRel/showDetails}" >
-        <center>
-            <input type="number" class="form-control mb-4 col-4" name="id" required autofocus="autofocus" placeholder="id of the customer">
-<button type="submit" class="btn btn-info col-3">Search Details</button>
-        </center>
-    </form>
+
+
+    <a th:href="@{/user/mobileList}" class="btn btn-primary btn-sm mb-3">Buy Mobile</a>
+
+
     <hr>
 </div>
 </body>
