--- a/src/main/resources/templates/mobileList.html
+++ b/src/main/resources/templates/mobileList.html
@@ -14,9 +14,9 @@
 <div class="container">
 
 
-<h3>Customers list</h3>
+<h3>Mobile list</h3>
 <hr>
-<a th:href="@{/customerRel/addMobile}" class="btn btn-primary btn-sm mb-3">Add Mobile</a>
+
 
 <table class="table table-bordered table-stripped">
     <thead class="thead-dark">
@@ -26,8 +26,6 @@
         <th>Mobile Ram</th>
         <th>Mobile Processor</th>
         <th>Mobile price</th>
-        <th>Customer Name</th>
-        <th>Customer Email</th>
         <th>Action</th>
 
     </tr>
@@ -41,13 +39,12 @@
         <td th:text="${mob.ramSize}"/>
         <td th:text="${mob.processor}"/>
         <td th:text="${mob.price}"/>
-        <td th:text="${mob.myCustomer.customerName}"/>
-        <td th:text="${mob.myCustomer.customerEmail}"/>
+
         <td>
 
 
-            <a th:href="@{/customerRel/deleteMobile(id=${mob.mobileId})}"
-               class="btn btn-danger">Delete</a>
+            <a th:href="@{/user/addMobile(id=${mob.mobileId})}"
+               class="btn btn-danger">Add to cart</a>
         </td>
     </tbody>
 </table>
