--- a/src/main/resources/templates/showSingleUser.html
+++ b/src/main/resources/templates/showSingleUser.html
@@ -19,17 +19,21 @@
     <tr>
         <th>Customer Name</th>
         <th>Customer Email</th>
+        <th>Mobile Name</th>
+        <th>Mobile price</th>
 
 
     </tr>
     </thead>
     <tbody>
 
-    <tr th:each="mob :${newCustomer}">
+    <tr>
 
 
-        <td th:text="${mob.customerName}"/>
-        <td th:text="${mob.customerEmail}"/>
+        <td th:text="${name}"/>
+        <td th:text="${email}"/>
+        <td th:text="${mobileName}"/>
+    <td th:text="${price}"/>
 
 
 
