--- a/src/main/resources/templates/mobileList.html
+++ b/src/main/resources/templates/mobileList.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Mobile List</title>
@@ -48,6 +50,10 @@
         </td>
     </tbody>
 </table>
+    <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/logout}">
+    <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout</button>
+
+    </form>
 </div>
 </body>
 </html>
